@@ -1,13 +1,13 @@
 package com.chattychat.Services;
 
 import com.chattychat.Entities.User;
+import com.chattychat.Exception.InvalidUserException;
 import com.chattychat.Repositories.UserRepository;
 import com.chattychat.dto.UserDTO;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -22,37 +22,33 @@ public class UserService {
         return userRepository.findAll()
                 .stream()
                 .map(User::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public UserDTO getUserById(UUID userId) {
         return userRepository.findById(userId)
                 .map(User::toDTO)
-                .orElse(null);
+                .orElseThrow(() -> new InvalidUserException("User not found"));
     }
 
     public UserDTO getUserByProviderAndProviderId(String provider, String providerId) {
         return userRepository.findByProviderAndProviderId(provider, providerId)
                 .map(User::toDTO)
-                .orElse(null);
+                .orElseThrow(() -> new InvalidUserException("User not found"));
     }
 
     public UserDTO updateUserDisplayName(UUID userId, String newDisplayName) {
-        User user = userRepository.findById(userId).orElse(null);
-        if (user == null) {
-            return null;
-        }
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new InvalidUserException("User not found"));
+
         user.setDisplayName(newDisplayName);
         userRepository.save(user);
         return user.toDTO();
     }
 
     public UserDTO deleteUser(UUID userId) {
-        User user = userRepository.findById(userId).orElse(null);
-
-        if (user == null) {
-            return null;
-        }
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new InvalidUserException("User not found"));
         userRepository.delete(user);
         return user.toDTO();
     }
